<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.covid.CovidFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:layout_height="wrap_content"
            android:text="@string/defaultTextValue"
            android:textSize="18sp"
            android:id="@+id/lastUpdateTimeText"
            tools:ignore="RtlHardcoded">


        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_margin="3sp"
                android:background="#FFFAF7"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:id="@+id/compareView1"
                    android:layout_marginTop="10sp">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:textColor="#E57631"
                    android:textSize="36sp"
                    android:id="@+id/numberView1">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/tag1">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:background="#FFF8F8">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:id="@+id/compareView2"
                    android:layout_marginTop="10sp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:textColor="#E61C1D"
                    android:textSize="36sp"
                    android:id="@+id/numberView2">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/tag2">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:background="#FFF4F4">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:id="@+id/compareView3"
                    android:layout_marginTop="10sp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:textColor="#BE2121"
                    android:textSize="36sp"
                    android:id="@+id/numberView3">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/tag3">
                </TextView>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_margin="3sp"
                android:background="#FEF7FF"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:id="@+id/compareView4"
                    android:layout_marginTop="10sp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:textColor="#AE3AC6"
                    android:textSize="36sp"
                    android:id="@+id/numberView4">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/tag4">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:background="#F1F5FF">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:id="@+id/compareView5"
                    android:layout_marginTop="10sp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:textColor="#4E8BE6"
                    android:textSize="36sp"
                    android:id="@+id/numberView5">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/tag5">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_margin="3sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:background="#F3F6F8">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:id="@+id/compareView6"
                    android:layout_marginTop="10sp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultTextValue"
                    android:textColor="#4E5A72"
                    android:textSize="36sp"
                    android:id="@+id/numberView6">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/tag6">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1.0"
                android:background="#F5F5F5"
                android:gravity="clip_horizontal|center"
                android:text="@string/location"
                android:textColor="#222222"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="2sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1.0"
                android:background="#FCF2E8"
                android:gravity="center"
                android:text="@string/now"
                android:textColor="#F4511E"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1.0"
                android:background="#FDEEEE"
                android:gravity="center"
                android:text="@string/total"
                android:textColor="#EC407A"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1.0"
                android:background="#E9F7EC"
                android:gravity="center|center_vertical"
                android:text="@string/heal"
                android:textColor="#178B50"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2sp"
                android:layout_marginRight="2sp"
                android:layout_weight="1.0"
                android:background="#F3F6F8"
                android:gravity="center|center_vertical"
                android:text="@string/dead"
                android:textColor="#4E5A65"
                android:textSize="20sp">

            </TextView>


        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TableLayout android:id="@+id/tableView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="20dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:stretchColumns="*">
                </TableLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <!--    <TextView-->
<!--        android:id="@+id/text_covid"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>

